fix: Use gap for spacing
Lowered the amount on previous margins and padding
then used the gap feature for the spacing of
items as it works better with flex.

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -11,22 +11,22 @@
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 8px;
-  margin: 8px;
-
+  padding: 4px 32px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
+  margin: 0px;
+  padding: 0px;
+  gap: 8px;
 }
 
 a {
   font-size: 22px;
   background: white;
   padding: 8px;
-  margin: 8px;
   /* this removes the line under the links */
   text-decoration: none;
 }
